@@ -1,3 +1,8 @@
+yamdi-1.3:
+   * [Fix] SCRIPTDATAVARIABLEEND tag of the onMetaData object was missing
+   * [Add] XML output of the meta data with option -x [teshock]
+   * [Add] Makefile and manpage [xtat]
+
 yamdi-1.2:
    * [Fix] Width and height calculation of ScreenVideo stream was
            wrong
